--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
 </head>
 <body>
 <div id="watermark">
-    <h1>Personal Psychologist</h1>
+    <h1>Medical Advisor</h1>
 </div>
 <div id="messages">
     {% for m in messages %}
@@ -126,7 +126,7 @@
     </form>
 </div>
 <div id="disclaimer">
-    <p>I will help you with questions related to mental health.</p>
+    <p>I will help you with medical questions.</p>
 </div>
 <script>
     const messagesDIV = document.getElementById("messages");
